[package]
name = "genius-cli"
version = "0.2.0"
edition = "2021"
description = "A command-line interface for Genius.com"
readme = "README.md"
repository = "https://github.com/tsirysndr/genius-cli"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app>", "James Choi <choijjames@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "lyrics", "cli", "genius"]

[[bin]]
name = "genius"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
colored_json = "2.1.0"
genius-rust = "0.1.1"
owo-colors = "3.5.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tabled = "0.8.0"
tokio = { version = "1.20.1", features = ["full"] }
